tests/parsing/type_redefinition_in_inst/stderr.golden
error: redefinition of type 't', first definition line 2 column 8
bus.fbd +3:8
   |
 3 |   type t static
   |        ^
bus.fbd +2:8
   |
 2 |   type t config
   |        ^
